# xmaterial_instance.plugin

./: .gitignore  CMakeLists.txt  README.md
Plugin.config/: resource_pipeline.config.txt
source/: xmaterial_instance_data_file.h  xmaterial_instance_runtime.h  xmaterial_instance_xgpu_rsc_loader.cpp  xmaterial_instance_xgpu_rsc_loader.h  xmaterial_intance_descriptor.h
source/Compiler/: main.cpp  xmaterial_instance_compiler.cpp  xmaterial_instance_compiler.h
